smurf: Add utility to merge FITS headers
The new application FITSMERGE merges the FITS headers in its input
files and writes the merged header into another file.  This is
to make the SMURF routine smf_fits_outhdr available to PICARD.

--- a/applications/smurf/libsmurf/Makefile.am
+++ b/applications/smurf/libsmurf/Makefile.am
@@ -19,6 +19,7 @@ smurf_dsutils.c \
 smurf_extinction.c \
 smurf_findslices.c \
 smurf_fit1d.c \
+smurf_fitsmerge.c \
 smurf_fixsteps.c \
 smurf_flatfield.c \
 smurf_fts2_deglitch.c \
