--- a/applications/smurf/libsmf/Makefile.am
+++ b/applications/smurf/libsmf/Makefile.am
@@ -285,6 +285,7 @@ smf_jsatile.c \
 smf_jsatiling.c \
 smf_jsatilei2xy.c \
 smf_jsatilexy2i.c \
+smf_jsatilexyconv.c \
 smf_jsatiles_data.c \
 smf_jsatiles_region.c \
 smf_keyname.c \
@@ -308,6 +309,7 @@ smf_map_or_malloc.c \
 smf_map_spikes.c \
 smf_mapbounds.c \
 smf_mapbounds_approx.c \
+smf_mapregion_approx.c \
 smf_mask_noisy.c \
 smf_maskacsis.c \
 smf_meanshift.c \
