gaia: link against VTK directly
On ubuntu this is neccesary as the dlloaded library symbols seem not to be shared
(cherry picked from commit ae656d5a21219e7f47d5d193f07b02d8e59002b8)

--- a/applications/gaia/gaia3d/configure.in.in
+++ b/applications/gaia/gaia3d/configure.in.in
@@ -206,6 +206,7 @@ GAIA3D_COMPILER_TESTS
 # VTK is always available, but keep this option to use another version.
 AM_OPTIONS_VTK
 AM_PATH_VTK([5.0.0])
+LDFLAGS_DEFAULT="$LDFLAGS_DEFAULT $LDFLAGS"
 AC_DEFINE([HAVE_VTK],[1],[Have suitable VTK libraries and headers])
 
 #--------------------------------------------------------------------
