--- a/applications/gaia/gaia3d/Makefile.in
+++ b/applications/gaia/gaia3d/Makefile.in
@@ -124,7 +124,7 @@ RANLIB		= @RANLIB@
 RANLIB_STUB	= @RANLIB_STUB@
 SHLIB_CFLAGS	= @SHLIB_CFLAGS@
 SHLIB_LD	= @SHLIB_LD@
-SHLIB_LD_LIBS	= @SHLIB_LD_LIBS@ @SHLIB_LD_CXX_LIBS@
+SHLIB_LD_LIBS	= @SHLIB_LD_LIBS@ @SHLIB_LD_CXX_LIBS@ $(VTK_LIBS)
 LD_LIBS		= @SHLIB_LD_LIBS@ @SHLIB_LD_CXX_LIBS@
 STLIB_LD	= @STLIB_LD@
 #TCL_DEFS	= @TCL_DEFS@
