latexsupport: small fixes to latexsupport files for both pdflatex and tex4ht

--- a/applications/latexsupport/starlinkxhtml.cfg
+++ b/applications/latexsupport/starlinkxhtml.cfg
@@ -1,5 +1,5 @@
 % Initial settings
-\Preamble{mathml,NoFonts,ext=htm,charset="utf-8"}
+\Preamble{mathml,NoFonts,ext=html,charset="utf-8"}
 
 
 % Configure the heading of the document
@@ -13,7 +13,8 @@
 \Configure{@HEAD}{\HCode{<meta
          \expandafter\csname a:charset\endcsname/>\Hnewline}}
 \Configure{@HEAD}{\HCode{<meta name="generator" content="TeX4ht
-         (http://www.tug.org/tex4ht/)" />\Hnewline}}
+         (http://www.
+tug.org/tex4ht/)" />\Hnewline}}
 \Configure{@HEAD}{\HCode{<link
          rel="stylesheet" type="text/css"
          href="\expandafter\csname aa:CssFile\endcsname" />\Hnewline
@@ -35,6 +36,16 @@
   </style>\Hnewline}}
 
 
+% include pdf files by automatically converting them
+  \Configure{graphics*}  
+         {pdf}  
+         {\Needs{"convert \csname Gin@base\endcsname.pdf  
+                               \csname Gin@base\endcsname.png"}%  
+          \Picture[pict]{\csname Gin@base\endcsname.png}%  
+          \special{t4ht+@File: \csname Gin@base\endcsname.png}
+         }  
+
+
 
 
 \begin{document}
@@ -43,12 +54,12 @@
 
 
 
-%\CutAt{likechapter,section}
-\CutAt{section,chapter}
-\CutAt{sstrefsection,section}
+
+
+
 %\Configure{+CutAt}{sstrefsection}{[}{]}
-\TocAt{section,subsection,sstrefsection}
-\DeclareGraphicsExtensions{.png,.jpg,.jpeg}
+
+\DeclareGraphicsExtensions{.png,.jpg,.jpeg,.pdf}
 
 \EndPreamble
 
@@ -144,7 +155,7 @@
 \Css{.small-caps, .booksubtitle, .dvday, .sectionHead, .likesectionHead,
 .dvquote-ref, .dvbox .lettrine-line{font-family: "EB Garamond SC", serif;}}
 \Css{.likesectionHead, .sectionHead{background-color:\#ACCFE6;padding:0.5\% 0.5\%}}
-\Css{.chapterHead{line-height:115\%;}}
+\Css{.appendixHead,.chapterHead{line-height:140\%;}}
 
 \Css{.minipage{width:50\%;}}
 
