latexsupport: improvements to starlink latex class and tex4ht files

--- a/applications/latexsupport/starlinkxhtml.cfg
+++ b/applications/latexsupport/starlinkxhtml.cfg
@@ -45,7 +45,20 @@ tug.org/tex4ht/)" />\Hnewline}}
           \special{t4ht+@File: \csname Gin@base\endcsname.png}
          }  
 
-
+\Configure{graphics*}
+        {jpg}
+        {%  
+           \Picture[pict]{\csname Gin@base\endcsname .jpg
+              \space width="\the\dimexpr \expandafter\csname Gin@req@width\endcsname * 1.5"
+}%  
+         }
+\Configure{graphics*}
+        {png}
+        {%  
+           \Picture[pict]{\csname Gin@base\endcsname .png
+              \space width="\expandafter\the\csname Gin@req@width\endcsname"
+}%  
+         }
 
 
 \begin{document}
@@ -59,7 +72,7 @@ tug.org/tex4ht/)" />\Hnewline}}
 
 %\Configure{+CutAt}{sstrefsection}{[}{]}
 
-\DeclareGraphicsExtensions{.png,.jpg,.jpeg,.pdf}
+\DeclareGraphicsExtensions{.eps,.pdf,.png,.jpg,.jpeg}
 
 \EndPreamble
 
@@ -169,7 +182,7 @@ tug.org/tex4ht/)" />\Hnewline}}
 
 \Css{hr.figure, hr.endfigure, hr.float, hr.endfloat {display:none;}}
 
-\Css{img{max-width:100\%;display:block;
+\Css{img{max-width:100\%;display:inline;
 	margin-left:auto;margin-right:auto;}}
 \Css{div.float{margin-left:auto;margin-right:auto;margin-top:3em;margin-bottom:3em;display:block;}}
 \Css{div.figure{margin-left:auto;margin-right:auto;margin-top:3em;margin-bottom:3em;display:block}}
