--- a/applications/latexsupport/starlinkxhtml.cfg
+++ b/applications/latexsupport/starlinkxhtml.cfg
@@ -81,6 +81,7 @@ tug.org/tex4ht/)" />\Hnewline}}
 \Configure{textsc}{\ifvmode \ShowPar\fi \HCode{<span class="sc">}}{\Tg</span>}
 \Configure{texttt}{\ifvmode \ShowPar\fi \HCode{<span class="tt">}}{\Tg</span>}
 \Configure{textbf}{\ifvmode \ShowPar\fi \HCode{<span class="bf">}}{\Tg</span>}
+\Configure{textsf}{\ifvmode \ShowPar\fi \HCode{<span  class="sf">}}{\Tg</span>}
 
 
 % replace \rule with an html <HR>:
@@ -90,6 +91,7 @@ tug.org/tex4ht/)" />\Hnewline}}
 % Set up css for the spans:
 \Css{.sc{font-variant: small-caps;}}
 \Css{.bf{font-weight: bold;}}
+\Css{.sf{font-family: "Verdana"; font-size:85\%;}}
 \Css{small{font-size: .8em;}}
 \Css{.tt{font-family: "Droid Sans Mono",monospace; white-space: normal;
      font-size: 85\%;line-space:85\%}}
@@ -156,7 +158,7 @@ tug.org/tex4ht/)" />\Hnewline}}
 %.dvprayer-text{font-family: "Georgia Italic", serif;}}
 
 \Css{.figure{font-family: "Verdana",sans-serif; font-size: 80\%;}}
-
+\Css{.sectionHead, .likesectionHead, .subsectionHead,.likesubsectionHead, .sstattributeHead {font-family:"Georgia", serif; font-weight:bold; font-size:110\%;}}
 
 \Css{strong, b, .partToc a, .partToc, .likepartToc a, .likepartToc,
 .chapterToc a, .chapterToc, .likechapterToc a, .likechapterToc,
@@ -237,6 +239,5 @@ tug.org/tex4ht/)" />\Hnewline}}
 }}
 
 
-
-
-	
+%\Css{div.footnotes{border-top:solid 1px black; border-bottom:solid 1px black; padding-bottom:1ex; padding-top:0.5ex; margin-top:2ex; font-style:italic; font-size:85\%;}}
+%\Css{div.footnotes p{margin-top:0; margin-bottom:0; text-indent:0;margin-left:10\%;margin-right:10\%;}}
