latexsupport; css on images improved

--- a/applications/latexsupport/starlinkxhtml.cfg
+++ b/applications/latexsupport/starlinkxhtml.cfg
@@ -184,8 +184,9 @@ tug.org/tex4ht/)" />\Hnewline}}
 
 \Css{hr.figure, hr.endfigure, hr.float, hr.endfloat {display:none;}}
 
-\Css{img{max-width:100\%;display:inline;
+\Css{img, img.graphics{max-width:100\%;display:inline;
 	margin-left:auto;margin-right:auto;}}
+\Css{.figure img.graphics{margin-left:auto; margin-right:auto;}}
 \Css{div.float{margin-left:auto;margin-right:auto;margin-top:3em;margin-bottom:3em;display:block;}}
 \Css{div.figure{margin-left:auto;margin-right:auto;margin-top:3em;margin-bottom:3em;display:block}}
 \Css{div.caption{display:block;caption-side:bottom;max-width:100\%}}
@@ -241,3 +242,5 @@ tug.org/tex4ht/)" />\Hnewline}}
 
 %\Css{div.footnotes{border-top:solid 1px black; border-bottom:solid 1px black; padding-bottom:1ex; padding-top:0.5ex; margin-top:2ex; font-style:italic; font-size:85\%;}}
 %\Css{div.footnotes p{margin-top:0; margin-bottom:0; text-indent:0;margin-left:10\%;margin-right:10\%;}}
+
+\Css{div.center div{text-align: center;}}
