latexsupport: tidying up of .4ht, .cfg and .sty files

--- a/applications/latexsupport/starlinkxhtml.cfg
+++ b/applications/latexsupport/starlinkxhtml.cfg
@@ -13,23 +13,21 @@
 \Configure{@HEAD}{\HCode{<meta
          \expandafter\csname a:charset\endcsname/>\Hnewline}}
 \Configure{@HEAD}{\HCode{<meta name="generator" content="TeX4ht
-         (http://www.
-tug.org/tex4ht/)" />\Hnewline}}
+         (http://www.tug.org/tex4ht/)" />\Hnewline}}
 \Configure{@HEAD}{\HCode{<link
          rel="stylesheet" type="text/css"
          href="\expandafter\csname aa:CssFile\endcsname" />\Hnewline
     }
 }
-%\Configure{@HEAD}{\HCode{<link
-%         rel="stylesheet" type="text/css"
-%         href='http://fonts.googleapis.com/css?family=EB+Garamond' />\Hnewline
-%    }
-%}
+
+% Loading a google font
 \Configure{@HEAD}{\HCode{<link
          rel="stylesheet" type="text/css"
          href='http://fonts.googleapis.com/css?family=Droid+Sans+Mono' />\Hnewline
     }
 }
+
+% Using mathjax for the font.
 \Configure{@HEAD}{\HCode{<script type="text/javascript"\Hnewline src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"\Hnewline></script>\Hnewline}}
   \Configure{@HEAD}{\HCode{<style type="text/css">\Hnewline
     .MathJax_MathML {text-indent: 0;}\Hnewline
@@ -37,55 +35,57 @@ tug.org/tex4ht/)" />\Hnewline}}
 
 
 % include pdf files by automatically converting them
-  \Configure{graphics*}  
-         {pdf}  
-         {\Needs{"convert \csname Gin@base\endcsname.pdf  
-                               \csname Gin@base\endcsname.png"}%  
-          \Picture[pict]{\csname Gin@base\endcsname.png}%  
+  \Configure{graphics*}
+         {pdf}
+         {\Needs{"convert \csname Gin@base\endcsname.pdf
+                               \csname Gin@base\endcsname.png"}%
+          \Picture[pict]{\csname Gin@base\endcsname.png}%
           \special{t4ht+@File: \csname Gin@base\endcsname.png}
-         }  
+         }
 
+% Include .jpg files (slightly expanded?)
 \Configure{graphics*}
         {jpg}
-        {%  
+        {%
            \Picture[pict]{\csname Gin@base\endcsname .jpg
               \space width="\the\dimexpr \expandafter\csname Gin@req@width\endcsname * 1.5"
-}%  
+}%
          }
+% Include .png files
 \Configure{graphics*}
         {png}
-        {%  
+        {%
            \Picture[pict]{\csname Gin@base\endcsname .png
               \space width="\expandafter\the\csname Gin@req@width\endcsname"
-}%  
+}%
          }
 
 
+
+%% stuff that needs to be loaded after begin document:
 \begin{document}
 
-% set html page to be 
-
-
-
-
-
-
-%\Configure{+CutAt}{sstrefsection}{[}{]}
-
+%% Declare the order to try and load images (eps at start to get
+%% automatic image size the same as in the dvi file written into
+%% html).
 \DeclareGraphicsExtensions{.eps,.pdf,.png,.jpg,.jpeg}
 
+%% End of preamble
 \EndPreamble
-
-
-% Set up small caps, bf and tt text as appropriately named spans:
-\Configure{textsc}{\ifvmode \ShowPar\fi \HCode{<span class="sc">}}{\Tg</span>}
-\Configure{texttt}{\ifvmode \ShowPar\fi \HCode{<span class="tt">}}{\Tg</span>}
-\Configure{textbf}{\ifvmode \ShowPar\fi \HCode{<span class="bf">}}{\Tg</span>}
-\Configure{textsf}{\ifvmode \ShowPar\fi \HCode{<span  class="sf">}}{\Tg</span>}
 
 
 % replace \rule with an html <HR>:
 \renewcommand\rule[2]{\HCode{<HR>}}
+
+
+
+%%----------------- font stuff-------
+% Set up small caps, bf sf and tt text as appropriately named spans:
+% Don't use \Tg but instead the \ifvmode...\Hcode stuff to avoid a bug.
+\Configure{textsc}{\ifvmode \ShowPar\fi \HCode{<span class="sc">}}{\Tg</span>}
+\Configure{texttt}{\ifvmode \ShowPar\fi \HCode{<span class="tt">}}{\Tg</span>}
+\Configure{textbf}{\ifvmode \ShowPar\fi \HCode{<span class="bf">}}{\Tg</span>}
+\Configure{textsf}{\ifvmode \ShowPar\fi \HCode{<span  class="sf">}}{\Tg</span>}
 
 
 % Set up css for the spans:
@@ -103,11 +103,12 @@ tug.org/tex4ht/)" />\Hnewline}}
 \Configure{BODY}{\Tg<body>}{\Tg</body>}
 
 
+% Css for various things.
 \Css{.pushright{float:right; }}
 \Css{.titlesection{font-size: 150\%; line-height: 120\%; width:100\%}}
 \Css{span.sctitleformat{font-size: 200\%;line-height:100\%;text-align:center;display: block;}}
 
-% General css:
+% General css for regular body:
 \Css{body{margin-top: 2em; margin-bottom: 1em; max-width: 45em;
     margin-left: auto; margin-right: auto; padding: 3em;
     color: \#444; 
@@ -119,47 +120,21 @@ tug.org/tex4ht/)" />\Hnewline}}
     font-size: 1em; line-height: 130\%;
     border: 1px solid \#fefeef; }}
 
+% Turn off indenting of text.
 \Css{p.indent{ text-indent: 0em }}
 
-%\Configure{HtmlPar}
-%{\EndP\Tg<p>}
-%{\EndP\Tg<p>}
-%{\HCode{</p>\Hnewline}}
-%{\HCode{</p>\Hnewline}}
 
 
-
-% \Css{@font-face{font-family: InitialsFont; font-style: normal;
-%     src: url(/fonts/CheshireInitials.ttf);}}
-% \Css{@font-face{font-family: "EB Garamond SC"; font-variant: small-caps;
-%     src: url(http://fonts.googleapis.com/fonts/EBGaramond12-SC.ttf);}}
-% \Css{@font-face{font-family: "EB Garamond"; font-style: normal;
-%     font-weight: normal; font-variant: normal;
-%     src: url(/fonts/EBGaramond12-Regular.ttf);}}
-% \Css{@font-face{font-family: "EB Garamond Italic"; font-style: italic; 
-%     font-weight: normal;font-variant: normal;
-%     src: url(/fonts/EBGaramond12-Italic.ttf);}} 
-% \Css{@font-face{font-family: "EB Garamond Bold"; font-style: normal;
-%     font-weight: bold; font-variant: normal;
-%     src: url(/fonts/EBGaramond12-Bold.ttf);}}
-% \Css{em, i, .ecti, .ecti1, .thanks, .signature, .dvquote-text, 
-% .dvprayer-text{font-family: "EB Garamond Italic", serif;}}
-
+% CSS font face option
 \Css{@font-face{font-family: "Droid Sans Mono";}}
 
-%\Css{@font-face{font-family: "Georgia SC"; font-variant: small-caps;}}
-%\Css{@font-face{font-family: "Georgia"; font-style: normal;
-%    font-weight: normal; }}
-%\Css{@font-face{font-family: "Georgia Italic"; font-style: italic; 
-%    font-weight: normal;}}
-%\Css{@font-face{font-family: "Georgia Bold"; font-style: normal;
-%    font-weight: bold; }}
-%\Css{em, i, .ecti, .ecti1, .thanks, .signature, .dvquote-text, 
-%.dvprayer-text{font-family: "Georgia Italic", serif;}}
-
+% Font for .figure
 \Css{.figure{font-family: "Verdana",sans-serif; font-size: 80\%;}}
+
+% Fonts for section headings.
 \Css{.sectionHead, .likesectionHead, .subsectionHead,.likesubsectionHead, .sstattributeHead {font-family:"Georgia", serif; font-weight:bold; font-size:110\%;}}
 
+% Fonts for some headings and table fo contents entries.
 \Css{strong, b, .partToc a, .partToc, .likepartToc a, .likepartToc,
 .chapterToc a, .chapterToc, .likechapterToc a, .likechapterToc,
 .appendixToc a, .appendixToc, .addchapToc, 
@@ -167,13 +142,22 @@ tug.org/tex4ht/)" />\Hnewline}}
 .subparagraphHead, .likesubparagraphHead,
 .caption td.id, .ecbx-0700{font-family: "EB Garamond Bold", serif;}}
 
+% Fonts for small caps stuff.
 \Css{.small-caps, .booksubtitle, .dvday, .sectionHead, .likesectionHead,
-.dvquote-ref, .dvbox .lettrine-line{font-family: "EB Garamond SC", serif;}}
-\Css{.likesectionHead, .sectionHead{background-color:\#ACCFE6;padding:0.5\% 0.5\%}}
+.dvquote-ref, .dvbox .lettrine-line{font-family: "EB Garamond SC",
+  serif;}}
+
+% Background colour for sectionHeas (blue)
+\Css{.likesectionHead,
+  .sectionHead{background-color:\#ACCFE6;padding:0.5\% 0.5\%}}
+
+% Fonts for chapter and appendix head
 \Css{.appendixHead,.chapterHead{line-height:140\%;}}
 
+% Minipage??? This will be problematic...
 \Css{.minipage{width:50\%;}}
 
+% Font for tipbox and starlinktextbox (blue background)
 \Css{.sltextbox,.tipbox{width:80\%; background-color:\#ACCFE6; border-color:\#ACCFE6; padding:1\% 1\%; margin:0 auto; border-style:solid; border-width:thick; border-radius:15px}}
 
 \Css{span.tbtitle + div.tipbox-text{ margin-top:10px}}
@@ -182,8 +166,11 @@ tug.org/tex4ht/)" />\Hnewline}}
 
 \Css{.tipboxtext{background-color:\#ACCFE6; width:99\%; display:block}}
 
+
+% Hide the rules around figures and floats
 \Css{hr.figure, hr.endfigure, hr.float, hr.endfloat {display:none;}}
 
+% Css various for images and captions
 \Css{img, img.graphics{max-width:100\%;display:inline;
 	margin-left:auto;margin-right:auto;}}
 \Css{.figure img.graphics{margin-left:auto; margin-right:auto;}}
@@ -191,6 +178,8 @@ tug.org/tex4ht/)" />\Hnewline}}
 \Css{div.figure{margin-left:auto;margin-right:auto;margin-top:3em;margin-bottom:3em;display:block}}
 \Css{div.caption{display:block;caption-side:bottom;max-width:100\%}}
 
+
+% Css for enumerated description list.
 \Css{.edlong{
     counter-reset: edlong-counter;}}
 
@@ -207,13 +196,12 @@ tug.org/tex4ht/)" />\Hnewline}}
     padding-right:1em;
   }}
 
-
-
 \Css{.edlong dt, .edlong dd{
     padding-left: 2.5\%;
     padding-right: 2.5\%;
   }}
 
+% Css for starlink description list 
 \Css{.sldes dl {width: 100\%;display:block}}
 
 \Css{.sldes dt {
@@ -222,9 +210,6 @@ tug.org/tex4ht/)" />\Hnewline}}
   width: 15\%;
   %background-color:\#0ff;
 }}
-
-
-
 
 \Css{.sldes dd {%
     float: left;
@@ -240,7 +225,9 @@ tug.org/tex4ht/)" />\Hnewline}}
 }}
 
 
-%\Css{div.footnotes{border-top:solid 1px black; border-bottom:solid 1px black; padding-bottom:1ex; padding-top:0.5ex; margin-top:2ex; font-style:italic; font-size:85\%;}}
-%\Css{div.footnotes p{margin-top:0; margin-bottom:0; text-indent:0;margin-left:10\%;margin-right:10\%;}}
+\Css{div.footnotes{border-top:solid 1px black; border-bottom:solid 1px black; padding-bottom:1ex; padding-top:0.5ex; margin-top:2ex; font-style:italic; font-size:85\%;}}
+\Css{div.footnotes p{margin-top:0; margin-bottom:0; text-indent:0;margin-left:10\%;margin-right:10\%;}}
 
+
+%% Css to align div.centers in center
 \Css{div.center div{text-align: center;}}
