erfa: Add erfa to build in thirdparty
This is added as a submodule. Nothing yet depends on it.

--- a/Makefile.dependencies
+++ b/Makefile.dependencies
@@ -793,6 +793,10 @@ $(MANIFESTS)/ems: \
 	cd libraries/ems \
 	  && $(MAKE_CPT)
 
+$(MANIFESTS)/erfa:
+	cd thirdparty/erfa \
+	  && $(MAKE_CPT)
+
 $(MANIFESTS)/esp: \
 		$(MANIFESTS)/agi \
 		$(MANIFESTS)/ard \
