--- a/applications/latexsupport/starlinkxhtml.cfg
+++ b/applications/latexsupport/starlinkxhtml.cfg
@@ -21,11 +21,11 @@
 }
 
 % Loading a google font
-\Configure{@HEAD}{\HCode{<link
-         rel="stylesheet" type="text/css"
-         href='http://fonts.googleapis.com/css?family=Droid+Sans+Mono' />\Hnewline
-    }
-}
+%\Configure{@HEAD}{\HCode{<link
+%         rel="stylesheet" type="text/css"
+%         href='http://fonts.googleapis.com/css?family=Droid+Sans+Mono' />\Hnewline
+%    }
+%}
 
 % Using mathjax for the font.
 \Configure{@HEAD}{\HCode{<script type="text/javascript"\Hnewline src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"\Hnewline></script>\Hnewline}}
@@ -34,14 +34,21 @@
   </style>\Hnewline}}
 
 
-% include pdf files by automatically converting them
+% include pdf files by automatically converting them with imagemagick
+% convert (picka  different prgram in Needs if wanted
+%Note all the sutff iwth Gin@... to get the width and height will only
+%be affected if you actually call include graphics with width/height
+%Can't use width and height or aspect ratio isn't preserved...
   \Configure{graphics*}
          {pdf}
-         {\Needs{"convert \csname Gin@base\endcsname.pdf
-                               \csname Gin@base\endcsname.png"}%
-          \Picture[pict]{\csname Gin@base\endcsname.png}%
-          \special{t4ht+@File: \csname Gin@base\endcsname.png}
+	 {\Needs{"convert \csname Gin@base\endcsname.pdf \csname Gin@base\endcsname.png"}%
+	 \Picture[]{\csname Gin@base\endcsname.png
+\space width="\the\dimexpr \expandafter\csname Gin@req@width\endcsname" 
+%\space height="\the\dimexpr \expandafter\csname Gin@req@height\endcsname" 
+}%
+          \special{t4ht+@File: \csname Gin@base\endcsname .png}
          }
+
 
 % Include .jpg files (slightly expanded?)
 \Configure{graphics*}
@@ -105,7 +112,7 @@
 
 % Css for various things.
 \Css{.pushright{float:right; }}
-\Css{.titlesection{font-size: 150\%; line-height: 120\%; width:100\%}}
+%\Css{.titlesection{font-size: 100\%; line-height: 120\%; width:100\%}}
 \Css{span.sctitleformat{font-size: 200\%;line-height:100\%;text-align:center;display: block;}}
 
 % General css for regular body:
@@ -178,6 +185,8 @@
 \Css{div.figure{margin-left:auto;margin-right:auto;margin-top:3em;margin-bottom:3em;display:block}}
 \Css{div.caption{display:block;caption-side:bottom;max-width:100\%}}
 
+\Css{dd.enumerate-enumitem{padding-left:0.5em;}}
+\Css{dt.enumerate-enumitem{float:left;clear:left;margin-left:1em;margin-right:0em}}
 
 % Css for enumerated description list.
 \Css{.edlong{
@@ -225,9 +234,10 @@
 }}
 
 
-\Css{div.footnotes{border-top:solid 1px black; border-bottom:solid 1px black; padding-bottom:1ex; padding-top:0.5ex; margin-top:2ex; font-style:italic; font-size:85\%;}}
-\Css{div.footnotes p{margin-top:0; margin-bottom:0; text-indent:0;margin-left:10\%;margin-right:10\%;}}
-
+\Css{div.footnotes{margin-right:0px;}}
+%\Css{div.footnotes{border-top:solid 1px black; border-bottom:solid 1px black; padding-bottom:1ex; padding-top:0.5ex; margin-top:2ex; font-style:italic; font-size:85\%;margin-right:0px}}
+%\Css{div.footnotes p{margin-top:0; margin-bottom:0; text-indent:0}}
+\Css{div.footnotes span.footnote-mark{padding-right:5px; padding-left:2px;}}
 
 %% Css to align div.centers in center
 \Css{div.center div{text-align: center;}}
