latexsupport: image support

--- a/applications/latexsupport/starlinkxhtml.cfg
+++ b/applications/latexsupport/starlinkxhtml.cfg
@@ -1,7 +1,9 @@
 % Initial settings
-\Preamble{mathml,NoFonts,ext=html,charset="utf-8"}
+\Preamble{xhtml,mathml,ext=html,charset="utf-8"}
+% Remove the mathml to create images for the text.
 
-
+%remove the irritating font spans.
+\NoFonts
 % Configure the heading of the document
 \Configure{PROLOG}{DOCTYPE}
 \Configure{VERSION}{}
@@ -42,8 +44,8 @@
   \Configure{graphics*}
          {pdf}
 	 {\Needs{"convert \csname Gin@base\endcsname.pdf \csname Gin@base\endcsname.png"}%
-	 \Picture[]{\csname Gin@base\endcsname.png
-\space width="\the\dimexpr \expandafter\csname Gin@req@width\endcsname" 
+	 \Picture[pdfpict]{\csname Gin@base\endcsname.png
+           \space width="\expandafter \the\dimexpr 1.25\csname Gin@req@width\endcsname" 
 %\space height="\the\dimexpr \expandafter\csname Gin@req@height\endcsname" 
 }%
           \special{t4ht+@File: \csname Gin@base\endcsname .png}
@@ -55,16 +57,22 @@
         {jpg}
         {%
            \Picture[pict]{\csname Gin@base\endcsname .jpg
-              \space width="\the\dimexpr \expandafter\csname Gin@req@width\endcsname * 1.5"
+             \space width="\expandafter \the\dimexpr 1.25\csname Gin@req@width\endcsname"
+ %             \space width="\the\dimexpr \expandafter\csname Gin@req@width\endcsname"
 }%
+ \special{t4ht+@File: \csname Gin@base\endcsname .png}
          }
 % Include .png files
+
 \Configure{graphics*}
         {png}
         {%
-           \Picture[pict]{\csname Gin@base\endcsname .png
-              \space width="\expandafter\the\csname Gin@req@width\endcsname"
+%\HCode{<img \space width="\expandafter \the\dimexpr 1.25\csname Gin@req@width\endcsname" alt="MyPict" src="\csname Gin@base\endcsname.png"></img>}
+           \Picture[pict]{\csname Gin@base\endcsname .png 
+              \space width="\expandafter \the\dimexpr 1.25\csname Gin@req@width\endcsname"
+%              \space width="\expandafter \the\csname Gin@req@width\endcsname"
 }%
+\special{t4ht+@File: \csname Gin@base\endcsname .png}
          }
 
 
@@ -88,21 +96,24 @@
 
 %%----------------- font stuff-------
 % Set up small caps, bf sf and tt text as appropriately named spans:
-% Don't use \Tg but instead the \ifvmode...\Hcode stuff to avoid a bug.
+% Don't use \Tg for the opening. but instead the \ifvmode...\Hcode stuff to avoid a bug.
 \Configure{textsc}{\ifvmode \ShowPar\fi \HCode{<span class="sc">}}{\Tg</span>}
-\Configure{texttt}{\ifvmode \ShowPar\fi \HCode{<span class="tt">}}{\Tg</span>}
-\Configure{textbf}{\ifvmode \ShowPar\fi \HCode{<span class="bf">}}{\Tg</span>}
+\Configure{texttt}{\ifvmode \ShowPar\fi \HCode{<code>}}{\Tg</code>}
+\Configure{textbf}{\ifvmode \ShowPar\fi \HCode{<b>}}{\Tg</b>}
 \Configure{textsf}{\ifvmode \ShowPar\fi \HCode{<span  class="sf">}}{\Tg</span>}
-
+\Configure{textit}{\ifvmode \ShowPar\fi \HCode{<em>}}{\HCode{</em>}}
+\ConfigureEnv{verbatim}{\HCode{<pre>}}{\HCode{</pre}}{}{}
 
 % Set up css for the spans:
 \Css{.sc{font-variant: small-caps;}}
-\Css{.bf{font-weight: bold;}}
+%\Css{.bf{font-weight: bold;}}
 \Css{.sf{font-family: "Verdana"; font-size:85\%;}}
 \Css{small{font-size: .8em;}}
 \Css{.tt{font-family: "Droid Sans Mono",monospace; white-space: normal;
      font-size: 85\%;line-space:85\%}}
 \Css{.terminalv,.verb,.verbatim,.fancyvrb{font-family: "Droid Sans Mono",monospace; white-space: nowrap;
+    color: \#191970; font-size: 85\%; line-space:85\%}}
+\Css{pr {font-family: "Droid Sans Mono",monospace; white-space: pre;
     color: \#191970; font-size: 85\%; line-space:85\%}}
 \Css{.task{font-family: "Verdana";font-size: 85\%;}}
 
@@ -122,7 +133,7 @@
     /*box-shadow: 2px 2px 20px -5px \#bfbfbf;*/
     /*-webkit-box-shadow: 2px 2px 20px -8px \#bfbfbf;*/
     /*-moz-box-shadow: 2px 2px 20px -5px \#bfbfbf;*/
-    font-family: "Georgia", serif;
+    font-family: serif;
     font-style: normal;
     font-size: 1em; line-height: 130\%;
     border: 1px solid \#fefeef; }}
