--- a/applications/latexsupport/starlinkxhtml.cfg
+++ b/applications/latexsupport/starlinkxhtml.cfg
@@ -1,14 +1,19 @@
-% Initial settings
-\Preamble{xhtml,mathml,ext=html,charset="utf-8"}
-% Remove the mathml to create images for the text.
+%------------------------ BASIC SETTINGS
 
-%remove the irritating font spans.
+% Initial settings
+\Preamble{mathml,ext=html,charset="utf-8"}
+
+% --- Remove the mathml to create images for the maths instead of mathml.
+% --- Add xhtml to prodcue xhtml (requires changes below)
+
+% Remove the irritating font spans.
 \NoFonts
+
 % Configure the heading of the document
 \Configure{PROLOG}{DOCTYPE}
-\Configure{VERSION}{}
-\Configure{DOCTYPE}{\HCode{<!DOCTYPE html>\Hnewline}}
-\Configure{HTML}{\HCode{<html>\Hnewline}}{\HCode{\Hnewline</html>}}
+\Configure{VERSION}{asdf}
+\Configure{DOCTYPE}{\HCode{<!DOCTYPE html>\Hnewline}} % HTML 5
+\Configure{HTML}{\HCode{<html>\Hnewline}}{\HCode{\Hnewline</html>}} % Removes xmlns line
 
 % Set the head
 \Configure{@HEAD}{}
@@ -22,233 +27,89 @@
     }
 }
 
-% Loading a google font
-%\Configure{@HEAD}{\HCode{<link
-%         rel="stylesheet" type="text/css"
-%         href='http://fonts.googleapis.com/css?family=Droid+Sans+Mono' />\Hnewline
-%    }
-%}
+%%%%%----------------MATHJAX
+% Use mathjax for the mathml (remove if using images)
+\Configure{@HEAD}{\HCode{<script type="text/javascript"
+    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>}}
+\Configure{@HEAD}{\HCode{<style type="text/css">.MathJax_MathML {text-indent: 0;}</style>}}
 
-% Using mathjax for the font.
-\Configure{@HEAD}{\HCode{<script type="text/javascript"\Hnewline src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"\Hnewline></script>\Hnewline}}
-  \Configure{@HEAD}{\HCode{<style type="text/css">\Hnewline
-    .MathJax_MathML {text-indent: 0;}\Hnewline
-  </style>\Hnewline}}
+
+
+%%%%%---------------GRAPHICS
+% This sizes the image to the same expected width. Only works if the
+% width has been specified by the user in the includegraphics command.
 
 
 % include pdf files by automatically converting them with imagemagick
-% convert (picka  different prgram in Needs if wanted
-%Note all the sutff iwth Gin@... to get the width and height will only
-%be affected if you actually call include graphics with width/height
-%Can't use width and height or aspect ratio isn't preserved...
-  \Configure{graphics*}
-         {pdf}
-	 {\Needs{"convert \csname Gin@base\endcsname.pdf \csname Gin@base\endcsname.png"}%
-	 \Picture[pdfpict]{\csname Gin@base\endcsname.png
-           \space width="\expandafter \the\dimexpr 1.25\csname Gin@req@width\endcsname" 
-%\space height="\the\dimexpr \expandafter\csname Gin@req@height\endcsname" 
-}%
-          \special{t4ht+@File: \csname Gin@base\endcsname .png}
-         }
+% convert (pick a  different prgram in the Needs{... expression below if wanted)
+\Configure{graphics*}
+     {pdf}
+     {\Needs{"convert \csname Gin@base\endcsname.pdf \csname Gin@base\endcsname.png"}%
+       \Picture[pdfpict]{\csname Gin@base\endcsname.png
+         \space width="\expandafter \the\numexpr 100 * \csname Gin@req@width\endcsname / \linewidth\%"
+       }%
+       \special{t4ht+@File: \csname Gin@base\endcsname .png}
+     }
 
 
-% Include .jpg files (slightly expanded?)
+% jpg files.
 \Configure{graphics*}
         {jpg}
         {%
            \Picture[pict]{\csname Gin@base\endcsname .jpg
-             \space width="\expandafter \the\dimexpr 1.25\csname Gin@req@width\endcsname"
- %             \space width="\the\dimexpr \expandafter\csname Gin@req@width\endcsname"
-}%
- \special{t4ht+@File: \csname Gin@base\endcsname .png}
+             \space width="\expandafter \the\numexpr 100 * \csname Gin@req@width\endcsname / \linewidth\%"
+           }%
+           \special{t4ht+@File: \csname Gin@base\endcsname .png}
          }
-% Include .png files
 
+% png files
 \Configure{graphics*}
         {png}
         {%
-%\HCode{<img \space width="\expandafter \the\dimexpr 1.25\csname Gin@req@width\endcsname" alt="MyPict" src="\csname Gin@base\endcsname.png"></img>}
-           \Picture[pict]{\csname Gin@base\endcsname .png 
-              \space width="\expandafter \the\dimexpr 1.25\csname Gin@req@width\endcsname"
-%              \space width="\expandafter \the\csname Gin@req@width\endcsname"
-}%
-\special{t4ht+@File: \csname Gin@base\endcsname .png}
-         }
+           \Picture[pict]{\csname Gin@base\endcsname .png
+              \space width="\expandafter \the\numexpr 100 * \csname Gin@req@width\endcsname / \linewidth\%"
+            }%
+
+            \special{t4ht+@File: \csname Gin@base\endcsname .png}
+          }
 
 
-
-%% stuff that needs to be loaded after begin document:
+%%%%%%%%%%%%%%-------------- BEGIN DOCUMENT
 \begin{document}
 
-%% Declare the order to try and load images (eps at start to get
-%% automatic image size the same as in the dvi file written into
-%% html).
-\DeclareGraphicsExtensions{.eps,.pdf,.png,.jpg,.jpeg}
+% Declare the order to try and load images.
+\DeclareGraphicsExtensions{.pdf,.png,.jpg,.jpeg}
 
-%% End of preamble
+%%%%%% ------------ CSS
+
+
+%% Ideally this would be in the class files, but that would mean
+%% writing all the css in the \Css{..} command and
+%% escaping % and # signs. \CssFile and \Css...\EndCss can only
+%%  be put in the document or the .cfg file (in the preamble).
+\CssFile[starlink_basic.css,sst.css]
+/* css.sty */
+\EndCssFile
+
+
+
+%%%%%%%%%%%%%%%------------ End of preamble
 \EndPreamble
 
 
-% replace \rule with an html <HR>:
-\renewcommand\rule[2]{\HCode{<HR>}}
 
 
-
-%%----------------- font stuff-------
-% Set up small caps, bf sf and tt text as appropriately named spans:
-% Don't use \Tg for the opening. but instead the \ifvmode...\Hcode stuff to avoid a bug.
+%%%%%%%%%%%%%%%--------------FONTS
+% Set up small caps, bf sf and tt text as appropriately named spans/or
+% use built in: [Don't use \Tg for the opening. but instead the
+% \ifvmode...\Hcode stuff to avoid a bug at start of paragraphs.]
 \Configure{textsc}{\ifvmode \ShowPar\fi \HCode{<span class="sc">}}{\Tg</span>}
 \Configure{texttt}{\ifvmode \ShowPar\fi \HCode{<code>}}{\Tg</code>}
 \Configure{textbf}{\ifvmode \ShowPar\fi \HCode{<b>}}{\Tg</b>}
 \Configure{textsf}{\ifvmode \ShowPar\fi \HCode{<span  class="sf">}}{\Tg</span>}
 \Configure{textit}{\ifvmode \ShowPar\fi \HCode{<em>}}{\HCode{</em>}}
-\ConfigureEnv{verbatim}{\HCode{<pre>}}{\HCode{</pre}}{}{}
-
-% Set up css for the spans:
-\Css{.sc{font-variant: small-caps;}}
-%\Css{.bf{font-weight: bold;}}
-\Css{.sf{font-family: "Verdana"; font-size:85\%;}}
-\Css{small{font-size: .8em;}}
-\Css{.tt{font-family: "Droid Sans Mono",monospace; white-space: normal;
-     font-size: 85\%;line-space:85\%}}
-\Css{.terminalv,.verb,.verbatim,.fancyvrb{font-family: "Droid Sans Mono",monospace; white-space: nowrap;
-    color: \#191970; font-size: 85\%; line-space:85\%}}
-\Css{pr {font-family: "Droid Sans Mono",monospace; white-space: pre;
-    color: \#191970; font-size: 85\%; line-space:85\%}}
-\Css{.task{font-family: "Verdana";font-size: 85\%;}}
-
-% Fix the body tag:
-\Configure{BODY}{\Tg<body>}{\Tg</body>}
-
-
-% Css for various things.
-\Css{.pushright{float:right; }}
-%\Css{.titlesection{font-size: 100\%; line-height: 120\%; width:100\%}}
-\Css{span.sctitleformat{font-size: 200\%;line-height:100\%;text-align:center;display: block;}}
-
-% General css for regular body:
-\Css{body{margin-top: 2em; margin-bottom: 1em; max-width: 45em;
-    margin-left: auto; margin-right: auto; padding: 3em;
-    color: \#444; 
-    /*box-shadow: 2px 2px 20px -5px \#bfbfbf;*/
-    /*-webkit-box-shadow: 2px 2px 20px -8px \#bfbfbf;*/
-    /*-moz-box-shadow: 2px 2px 20px -5px \#bfbfbf;*/
-    font-family: serif;
-    font-style: normal;
-    font-size: 1em; line-height: 130\%;
-    border: 1px solid \#fefeef; }}
-
-% Turn off indenting of text.
-\Css{p.indent{ text-indent: 0em }}
 
 
 
-% CSS font face option
-\Css{@font-face{font-family: "Droid Sans Mono";}}
-
-% Font for .figure
-\Css{.figure{font-family: "Verdana",sans-serif; font-size: 80\%;}}
-
-% Fonts for section headings.
-\Css{.sectionHead, .likesectionHead, .subsectionHead,.likesubsectionHead, .sstattributeHead {font-family:"Georgia", serif; font-weight:bold; font-size:110\%;}}
-
-% Fonts for some headings and table fo contents entries.
-\Css{strong, b, .partToc a, .partToc, .likepartToc a, .likepartToc,
-.chapterToc a, .chapterToc, .likechapterToc a, .likechapterToc,
-.appendixToc a, .appendixToc, .addchapToc, 
-.paragraphHead, .likeparagraphHead,
-.subparagraphHead, .likesubparagraphHead,
-.caption td.id, .ecbx-0700{font-family: "EB Garamond Bold", serif;}}
-
-% Fonts for small caps stuff.
-\Css{.small-caps, .booksubtitle, .dvday, .sectionHead, .likesectionHead,
-.dvquote-ref, .dvbox .lettrine-line{font-family: "EB Garamond SC",
-  serif;}}
-
-% Background colour for sectionHeas (blue)
-\Css{.likesectionHead,
-  .sectionHead{background-color:\#ACCFE6;padding:0.5\% 0.5\%}}
-
-% Fonts for chapter and appendix head
-\Css{.appendixHead,.chapterHead{line-height:140\%;}}
-
-% Minipage??? This will be problematic...
-\Css{.minipage{width:50\%;}}
-
-% Font for tipbox and starlinktextbox (blue background)
-\Css{.sltextbox,.tipbox{width:80\%; background-color:\#ACCFE6; border-color:\#ACCFE6; padding:1\% 1\%; margin:0 auto; border-style:solid; border-width:thick; border-radius:15px}}
-
-\Css{span.tbtitle + div.tipbox-text{ margin-top:10px}}
-
-\Css{.tbtitle{display:block;font-weight:bold;background-color:\#ACCFE6;border-color:\#ACCFE6}}
-
-\Css{.tipboxtext{background-color:\#ACCFE6; width:99\%; display:block}}
 
 
-% Hide the rules around figures and floats
-\Css{hr.figure, hr.endfigure, hr.float, hr.endfloat {display:none;}}
-
-% Css various for images and captions
-\Css{img, img.graphics{max-width:100\%;display:inline;
-	margin-left:auto;margin-right:auto;}}
-\Css{.figure img.graphics{margin-left:auto; margin-right:auto;}}
-\Css{div.float{margin-left:auto;margin-right:auto;margin-top:3em;margin-bottom:3em;display:block;}}
-\Css{div.figure{margin-left:auto;margin-right:auto;margin-top:3em;margin-bottom:3em;display:block}}
-\Css{div.caption{display:block;caption-side:bottom;max-width:100\%}}
-
-\Css{dd.enumerate-enumitem{padding-left:0.5em;}}
-\Css{dt.enumerate-enumitem{float:left;clear:left;margin-left:1em;margin-right:0em}}
-
-% Css for enumerated description list.
-\Css{.edlong{
-    counter-reset: edlong-counter;}}
-
-\Css{.edlong dt {
-    position: relative; font-weight: bold; font-size: 100\%;
-    left: 2.5\%; right: 2.5\%}}
-
-\Css{.edlong dt:before{
-    content: "(" counter(edlong-counter) ")";
-    counter-increment: edlong-counter;
-    font-weight: bold;
-    font-size: 100\%;
-    padding-left:2.5\%;
-    padding-right:1em;
-  }}
-
-\Css{.edlong dt, .edlong dd{
-    padding-left: 2.5\%;
-    padding-right: 2.5\%;
-  }}
-
-% Css for starlink description list 
-\Css{.sldes dl {width: 100\%;display:block}}
-
-\Css{.sldes dt {
-  float:left;
-  clear: left;
-  width: 15\%;
-  %background-color:\#0ff;
-}}
-
-\Css{.sldes dd {%
-    float: left;
-    width:85\%;
-    display:block;
-    %background-color:orange;
-    margin-left:0\%;
-    margin-bottom: 2em;}}
-
-\Css{.sldes dd p:first-child{
-    %background-color:yellow;
-    margin-top:0%;
-}}
-
-
-\Css{div.footnotes{margin-right:0px;}}
-%\Css{div.footnotes{border-top:solid 1px black; border-bottom:solid 1px black; padding-bottom:1ex; padding-top:0.5ex; margin-top:2ex; font-style:italic; font-size:85\%;margin-right:0px}}
-%\Css{div.footnotes p{margin-top:0; margin-bottom:0; text-indent:0}}
-\Css{div.footnotes span.footnote-mark{padding-right:5px; padding-left:2px;}}
-
-%% Css to align div.centers in center
-\Css{div.center div{text-align: center;}}
