latexsupport: allow side by side images
starlinkxhtml.cfg updated to include a forcing out of vmode
in the configure pictures section. This prevents imgs from being
wrapped in a <p> tag, preventing side by side placement.

--- a/applications/latexsupport/starlinkxhtml.cfg
+++ b/applications/latexsupport/starlinkxhtml.cfg
@@ -45,7 +45,7 @@
 \Configure{graphics*}
      {pdf}
      {\Needs{"convert \csname Gin@base\endcsname.pdf \csname Gin@base\endcsname.png"}%
-       \Picture[pdfpict]{\csname Gin@base\endcsname.png
+       \ifvmode \IgnorePar\fi \EndP\Picture[pdfpict]{\csname Gin@base\endcsname.png
          \space width="\expandafter \the\numexpr 100 * \csname Gin@req@width\endcsname / \linewidth\%"
        }%
        \special{t4ht+@File: \csname Gin@base\endcsname .png}
@@ -56,7 +56,7 @@
 \Configure{graphics*}
         {jpg}
         {%
-           \Picture[pict]{\csname Gin@base\endcsname .jpg
+           \ifvmode \IgnorePar\fi \EndP\Picture[pict]{\csname Gin@base\endcsname .jpg
              \space width="\expandafter \the\numexpr 100 * \csname Gin@req@width\endcsname / \linewidth\%"
            }%
            \special{t4ht+@File: \csname Gin@base\endcsname .png}
@@ -66,10 +66,9 @@
 \Configure{graphics*}
         {png}
         {%
-           \Picture[pict]{\csname Gin@base\endcsname .png
+           \ifvmode \IgnorePar\fi \EndP \Picture[pict]{\csname Gin@base\endcsname .png
               \space width="\expandafter \the\numexpr 100 * \csname Gin@req@width\endcsname / \linewidth\%"
             }%
-
             \special{t4ht+@File: \csname Gin@base\endcsname .png}
           }
 
